k8s/account-service-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: account-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: account-service

  template:
    metadata:
      labels:
        app: account-service

    spec:
      containers:
        - name: account-service

          image: account-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8082
