k8s/api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
        - name: api-gateway

          image: api-gateway:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8085
