k8s/notification-service-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
        - name: notification-service

          image: dockermspyq/notification-service:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8084
