k8s/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: registry-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: registry

  template:
    metadata:
      labels:
        app: registry

    spec:
      containers:
        - name: registry
          image: dockermspyq/service-registry:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8761
