k8s/transaction-service-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: transaction-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: transaction-service

  template:
    metadata:
      labels:
        app: transaction-service

    spec:
      containers:
        - name: transaction-service

          image: transaction-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8083
