k8s/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service

          image: dockermspyq/user-service:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8081
