k8s/account-service.yml
apiVersion: v1
kind: Service

metadata:
  name: account-service

spec:
  selector:
    app: account-service

  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

  type: NodePort
