k8s/api-gateway-service.yml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway-service

spec:
  selector:
    app: api-gateway

  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085

  type: NodePort
