k8s/notification-service.yml
apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:
  selector:
    app: notification-service

  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084

  type: NodePort
