k8s/registry-service.yml
apiVersion: v1
kind: Service

metadata:
  name: registry-service

spec:
  selector:
    app: registry

  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761

  type: NodePort
