k8s/transaction-service.yml
apiVersion: v1
kind: Service

metadata:
  name: transaction-service

spec:
  selector:
    app: transaction-service

  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083

  type: NodePort
