k8s/user-service.yml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:
  selector:
    app: user-service

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

  type: NodePort
