k8s/banking-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: banking-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway-service

                port:
                  number: 8085
